@@ -23,6 +23,7 @@
     * All files in data_dir (user's home by default)
     * Parse print info from the file name (for SD files)
     * Introduce ErrorState(s) from SDK
+    * Modify `LCDPrinter` to show IP and status based on SDK error states
 
 0.2.0 (2020-12-14)
 
